# pico-sdr

./: .gitignore  .gitmodules  README.md  requirements.txt
Antenna-RF-Amplifier-S9018/: HF-Pre-Amp.kicad_prl
Antenna-RF-Amplifier-S9018/jlcpcb/production_files/: BOM-HF-Pre-Amp.csv  CPL-HF-Pre-Amp.csv
grc/: PicoSDR-WBFM.grc  PicoSDR.grc
sim/: psk.txt
src/: CMakeLists.txt  main.c  pico_sdr.uf2
util/: bridge.py
